--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <main>
       <div class="set">
-        <button class="w drum" aria-label="Tom 1 - Press W">w</button>
-        <button class="a drum" aria-label="Tom 2 - Press A">a</button>
-        <button class="s drum" aria-label="Tom 3 - Press S">s</button>
-        <button class="d drum" aria-label="Tom 4 - Press D">d</button>
-        <button class="j drum" aria-label="Snare - Press J">j</button>
-        <button class="k drum" aria-label="Crash - Press K">k</button>
-        <button class="l drum" aria-label="Kick - Press L">l</button>
+        <button class="w drum" >w</button>
+        <button class="a drum" >a</button>
+        <button class="s drum" >s</button>
+        <button class="d drum" >d</button>
+        <button class="j drum" >j</button>
+        <button class="k drum" >k</button>
+        <button class="l drum" >l</button>
       </div>
     </main>
 
